2014-01-07  6.9.0-4 Cristy  <quetzlzacatenango@image...>
  * Additional coder sanity checks (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26842,
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26682).

2014-01-05  6.9.0-4 Dirk Lemstra <dirk@lem.....org>
  * Report Ghostscript version when -verbose is used and when an exception
    is raised.

2014-01-01  6.9.0-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-3, SVN revision 17537.

2015-01-01  6.9.0-3 Cristy  <quetzlzacatenango@image...>
  * ImageMagick builds when HDRI is enabled (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26803).

2014-12-31  6.9.0-3 Glenn Randers-Pehrson <glennrp@image...>
  * Don't read beyond the end of a tEXt keyword when checking for Raw profile.

2014-12-27  6.9.0-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.0-2, SVN revision 17468.

2014-12-14  6.9.0-1 Dirk Lemstra <dirk@snakeware...>
  * Added support for reading EXR files to the Windows distribution.
  * Fixed enabling alpha in 32-bit BMP files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26662).
  * Added support for writing 16-bit TGA files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=26693).
  * Improved performance of dds:cluster-fit when OpenMP is enabled.
  * Added support for distributed pixel cache to the Windows distribution.

2014-12-04  6.9.0-1 Alexey Dolgavin <dolgavin.alexey@gmail...>
  * Fix ImageMagick crashes while read EXIF from TIFF.

2014-11-20  6.9.0-1 Glenn Randers-Pehrson <glennrp@image...>
  * Don't handle a "previous" image in the PNG or JNG decoder.
  * Don't override gamma with 1.0 when reading a grayscale PNG image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=26576).
  * Update progress monitor for every PNG row instead of every pass (reference